website/style.css
:root {
    --darkgrey: #272727;
    --darkgrey-: #111111;
    --yellow: #FFFF43;
    --aqua: #42FFEA;
    --purple: #9F42FF;
    --orange: #FF7D42;
    --green: #42FF81;
    --coral: #FF4642;
}

@font-face {
    font-family: 'Jaro';
    src: url("https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap");
}

@font-face {
    font-family: 'Nunito';
    src: url('./public/Nunito-VariableFont_wght.ttf');
}

@font-face {
    font-family: 'StreetFighter';
    src: url('./public/CityBrawlersBoldCaps.otf');
}

@font-face {
    font-family: 'Furore';
    src: url("./public/Furore.otf");
}

@font-face {
    font-family: 'Akony';
    src: url("./public/AKONY.otf");
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Nunito';
}

header {
    position: sticky;
    top: 0;
    left: 0;
    z-index: 10;

    width: 100%;
    height: auto;
    padding: 0 30px 0 10px;
    background-color: var(--darkgrey-);
    display: flex;
    flex-direction: row;
    align-items: center;
}

.header-box {
    width: 100%;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    justify-content: space-between;
    ul li {
        display: inline-block;
        list-style: none;
        margin: 10px 30px;
        a {
            text-decoration: none;
            color: white;
            font-size: larger;
        }
    }
}


@media screen and (max-width: 768px) {
    header {
        text-align: center;
        position: relative;
        flex-direction: column;
        h1 {
            font-size: x-large;
        }
    }
    .header-box {
        display: inline;
        ul {
            align-self: center;
        }
        ul li {
            font-size: larger;
            display: flex;
            flex-direction: column;
            align-items: center;
        }
    }
}

.dropdown {
    position: relative;
    display: inline-block;
  }
  
  .dropdown-content {
    right: -100px;
    display: none;
    position: absolute;
    background-color: var(--darkgrey);
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
  
.dropdown-content a:hover {background-color: var(--darkgrey-)}
  
.dropdown:hover .dropdown-content {display: grid; grid-template-rows: repeat(4, 40px); grid-template-columns: repeat(6, 120px);}

@media screen and (max-width: 768px) {
    .dropdown-content {
        right: -30vw;
        a {
            font-size: larger;
        }
    }

    .dropdown:hover .dropdown-content {display: grid; grid-template-rows: repeat(6, 50px); grid-template-columns: repeat(4, 20vw);}
}
@media screen and (max-width: 425px) {
    .dropdown-content {
        right: -37.6vw;
    }

    .dropdown:hover .dropdown-content {display: grid; grid-template-rows: repeat(8, 60px); grid-template-columns: repeat(3, 33.3vw);}
}


.logo {
    margin: 5px 5px 5px 5px;
    height: 80px;
    background-size: contain;
}

body {
    background-color: var(--darkgrey);
    width: 100vw;
    min-height: 100vh;
    overflow-y: auto;
    overflow-x: hidden;
}

.main-text {
    margin: 30px 40px;
    text-align: center;
    p {
        font-size: large;
        margin: 10px;
        color: white;
    }
}

footer {
    background-color: var(--darkgrey-);
    width: 100%;
    height: auto;
    padding: 20px;
}

h1 {
    color: white;
    font-family: "Furore";
}

h2 {
    color: white;
    font-family: "Furore";
}

h3 {
    color: white;
}

a {
    text-decoration: none;
    color: var(--aqua);
}


.characters-table {
    margin: 2vw 10vw 5vw 10vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.card
{
    margin: 5px;
    width: 240px;
    height: 300px;
    border-radius: 15px;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    z-index: 1;
    transition: filter 0.1s;
    filter: grayscale(100%);
    a {
        z-index: 3;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
        align-items: flex-start;
        padding: 5%;
        h4 {
            font-family: 'StreetFighter';
            font-size: 64px;
            color: white;
            text-shadow:
                4px 4px 0 var(--darkgrey),
                -2px 2px 0 var(--darkgrey),
                -2px -2px 0 var(--darkgrey),
                2px -2px 0 var(--darkgrey);
        }
    }
    img {
        z-index: 2;
        width: 100%;
        height: 100%;
    }
}

@media screen and (max-width: 768px) {
    .card {
        width: 180px;
        height: 216px;
    }
}

@media screen and (max-width: 425px) {
    .card {
        width: 35vw;
        height: 42vw;
        a h4 {
            font-size: 48px;
        }
    }
}

.card:hover {
    filter: none;
    transition: filter 0.2s;
}

.table-help {
    height: 500px;
    background-color: var(--darkgrey);
}

.search-bar-container {
    position: sticky;
    top: 90px;
    background-color: var(--darkgrey-);
    padding: 10px;
    z-index: 2;
}

@media screen and  (max-width: 768px){
    .search-bar-container {
        top: 0;
    }
}

#search-bar {
    border-style: none;
    width: 95%;
    height: 30px;
    padding-left: 5px;
    margin-inline: 2.5vw;
    font-size: large;
    font-weight: 600;
}

.highlight {
    background-color: var(--purple);
}

.term {
    padding: 20px;
    border-bottom: 1px solid var(--darkgrey-);
}

.searchable {
    font-size: x-large;
}

.term-text{
    color: white;
    font-family: "Nunito";
    padding-top: 10px;
    font-size: larger;
}

@media screen and (max-width: 768px) {
    .background-portrait {
        position: absolute;
        width: 100%;
        height: 25vh;
        margin: 0;
        padding: 0;
        background-size: cover;
        background-position-y: -50px;
    }

    .navigation-btn {
        width: 50%;
        z-index: 1;
    }

    .DataTable {
        overflow-x: scroll;
    }
}

